[ENH] Theme base: fix contrast and spacing issue on sitetitle and sitesubtitle

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -256,9 +256,9 @@ form.simple label .warning {
 div.cvsup {
   color: #dee2e6; }
 
-.layout_social .topbar_modules h1.sitetitle, .layout_social_modules .topbar_modules h1.sitetitle {
-  color: rgba(0, 0, 0, 0.5); }
-  .layout_social .topbar_modules .navbar-inverse .navbar-collapse, .layout_social_modules .topbar_modules .navbar-inverse .navbar-collapse, .layout_social .topbar_modules .navbar-inverse .navbar-form, .layout_social_modules .topbar_modules .navbar-inverse .navbar-form, .layout_social .topbar_modules .navbar-inverse, .layout_social_modules .topbar_modules .navbar-inverse {
+.fixed-top h1.sitetitle > a, .layout_social .topbar_modules h1.sitetitle > a, .layout_social_modules .topbar_modules h1.sitetitle > a, .fixed-top h2.sitesubtitle, .layout_social .topbar_modules h2.sitesubtitle, .layout_social_modules .topbar_modules h2.sitesubtitle {
+  color: rgba(255, 255, 255, 0.5); }
+  .fixed-top .navbar-inverse .navbar-collapse, .layout_social .topbar_modules .navbar-inverse .navbar-collapse, .layout_social_modules .topbar_modules .navbar-inverse .navbar-collapse, .fixed-top .navbar-inverse .navbar-form, .layout_social .topbar_modules .navbar-inverse .navbar-form, .layout_social_modules .topbar_modules .navbar-inverse .navbar-form, .fixed-top .navbar-inverse, .layout_social .topbar_modules .navbar-inverse, .layout_social_modules .topbar_modules .navbar-inverse {
     border-color: transparent; }
 
 .prio5 {
@@ -3057,8 +3057,12 @@ body.fullscreen.tiki.navbar-padding {
     font-size: 1.8rem;
     margin-top: 10px;
     margin-bottom: 0; }
+  .layout_social h2.sitesubtitle, .layout_social_modules h2.sitesubtitle {
+    font-size: 1.2rem; }
   .layout_social h1.sitetitle, .layout_social_modules h1.sitetitle, .layout_social h2.sitesubtitle, .layout_social_modules h2.sitesubtitle {
     display: inline-block; }
+  .layout_social .sitetitle, .layout_social_modules .sitetitle, .layout_social .sitesubtitle, .layout_social_modules .sitesubtitle {
+    margin-right: 1rem; }
   .layout_social #topbar_modules, .layout_social_modules #topbar_modules {
     display: inline-block; }
 
